[package]
name = "oko"
version = "0.1.0"
authors = ["Eddy Stefes <eduard.stefes@googlemail.com>"]
build = "build.rs"

[dependencies]
libc = "*"
env_logger = "*"
serde = "1"
serde_json = "*"
serde_derive = "1"
hyper = "0.9.14"
md5 = "*"
serde_urlencoded = "0.2.1"
csv = "1.0.0-beta.4"
clap = "*"
rusqlite = "*"
toml = "*"
